--- a/themes/default/styles.css
+++ b/themes/default/styles.css
@@ -9,35 +9,111 @@
 
     /*GENERICS*/
         /*COLORS*/
-            --text-color: #333333;
-            --focus-color: #ffca0a;
+            --text-color: var(--whib-840);
+            --focus-color: var(--honeymoon-400);
 
         /*COMPOSITIONS*/
             --default-transition-time: 0.3s;
-            --default-outline-focus-effect: var(--focus-color) solid 3px;
+            --default-outline-focus-effect: var(--honeymoon-400) solid 3px;
 
     /*COMPONENTS*/
         /*DIALOG*/
-            --dialog-background-a: #e6e6e6;
-            --dialog-border: #000000;
-            --dialog-shadow: #000000;
-            --dialog-button-background: #ffffff;
-            --dialog-background-image-offshadow: #00000033;
+            --dialog-background-a: var(--whib-120);
+            --dialog-border: black;
+            --dialog-shadow: black;
+            --dialog-button-background: var(--whib-60);
+            --dialog-background-image-offshadow: var(--shadowing-300);
 
         /*BUTTON*/
-            --button-background: #e6e6e6;
-            --button-border: #000000;
-            --button-inset-shadow: #00000040;
-            --button-inset-shadow-top: #ffffff50;
-            --button-success: #7fd47f;
-            --button-danger: #d47f7f;
-            --button-warning: #d4c17f;
+            --button-border: black;
+            --button-inset-shadow: var(--shadowing-400);
+            --button-inset-shadow-top: var(--shadowing-500);
+            
+            --button-green: var(--chartreuse-500);
+            --button-green-hover: var(--chartreuse-400);
+            --button-green-active: var(--chartreuse-300);
+
+            --button-red: var(--crimson-500);
+            --button-red-hover: var(--crimson-400);
+            --button-red-active: var(--crimson-300);
+
+            --button-orange: var(--orange-red-400);
+            --button-orange-hover: var(--orange-red-300);
+            --button-orange-active: var(--orange-red-200);
+
+            --button-primary: var(--honeymoon-400);
+            --button-primary-hover: var(--honeymoon-300);
+            --button-primary-active: var(--honeymoon-200);
+
+            --button-default: var(--whib-180);
+            --button-default-hover: var(--whib-120);
+            --button-default-active: var(--whib-60);
 
         /* INPUT */
-            --input-background: #ffffff;
-            --input-border: #000000;
-            --input-inset-shadow: #00000050;
-            --input-shadow: #ffffff;
-            --input-shadow-focus: #ffca0a;
+            --input-background: var(--whib-60);
+            --input-border: var(--whib-960);
+            --input-inset-shadow: var(--shadowing-500);
+            --input-shadow: var(--whib-60);
+            --input-shadow-focus: var(--honeymoon-400);
 
+}
+
+.b-button {
+    font-size: 10px;
+    color: var(--text-color);
+}
+
+/*DEFAULT*/
+.b-button .b-button-default {
+    background-color: var(--button-default);
+}
+.b-button .b-button-default:hover {
+    background-color: var(--button-default-hover);
+}
+.b-button .b-button-default:active {
+    background-color: var(--button-default-active);
+}
+
+/*PRIMARY*/
+.b-button .b-button-primary {
+    background-color: var(--button-primary);
+}
+.b-button .b-button-primary:hover {
+    background-color: var(--button-primary-hover);
+}
+.b-button .b-button-primary:active {
+    background-color: var(--button-primary-active);
+}
+
+/*ORANGE*/
+.b-button .b-button-orange {
+    background-color: var(--button-orange);
+}
+.b-button .b-button-orange:hover {
+    background-color: var(--button-orange-hover);
+}
+.b-button .b-button-orange:active {
+    background-color: var(--button-orange-active);
+}
+
+/*GREEN*/
+.b-button .b-button-green {
+    background-color: var(--button-green);
+}
+.b-button .b-button-green:hover {
+    background-color: var(--button-green-hover);
+}
+.b-button .b-button-green:active {
+    background-color: var(--button-green-active);
+}
+
+/*RED*/
+.b-button .b-button-red {
+    background-color: var(--button-red);
+}
+.b-button .b-button-red:hover {
+    background-color: var(--button-red-hover);
+}
+.b-button .b-button-red:active {
+    background-color: var(--button-red-active);
 }
